cmake_minimum_required(VERSION 3.1)
add_definitions(-DLOCAL)
add_definitions(-ftrapv)
add_definitions(-D_GLIBCXX_DEBUG)
project(abc045)
set(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} -std=c++11)

add_executable(abc045_a a.cpp)
add_executable(abc045_b b.cpp)
add_executable(abc045_c c.cpp)
add_executable(abc045_d d.cpp)
add_executable(abc045_e e.cpp)
add_executable(abc045_f f.cpp)
